<resources>
    <string name="app_name">work 3.3.1</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="null1"> </string>
    <string name="point_tosk">Точка уже введиина</string>
    <string name="с">С</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="equally">=</string>

    <string name="m">M</string>
    <string name="a">A</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="v">V</string>
    <string name="title_activity_tollbar">tollbar</string>

    <string name="menu_normal">Стандартный каклькулятор</string>
    <string name="menu_engineering">Инженерный калькулятор</string>
    <string name="root">√</string>
    <string name="square">х²</string>
    <string name="sin">SIN</string>
    <string name="cos">COS</string>

    <string name="m_plus">M+</string>
    <string name="m_minus">M-</string>
    <string name="sqrt">Sqrt</string>
    <string name="one_del_x">1/x</string>
    <string name="log">Log</string>
    <string name="ln">Ln</string>
    <string name="exp">exp</string>
    <string name="mod">mod</string>
    <string name="n_faktr">n!</string>






</resources>
