<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/darker_gray"
            android:drawableTop="@android:color/black"
            android:drawableBottom="@android:color/black"
            android:textSize="50sp"
            tools:ignore="NotSibling" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/output">


            <TextView
                android:id="@+id/m"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/m"
                app:layout_constraintEnd_toStartOf="@+id/a"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />


            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/a"
                app:layout_constraintEnd_toStartOf="@+id/r"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/m"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/r"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/r"
                app:layout_constraintEnd_toStartOf="@+id/t"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/a"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/t"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/t"
                app:layout_constraintEnd_toStartOf="@+id/y"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/r"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/y"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/y"
                app:layout_constraintEnd_toStartOf="@+id/n"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/t"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/n"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/n"
                app:layout_constraintEnd_toStartOf="@+id/o"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/y"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/o"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/o"
                app:layout_constraintEnd_toStartOf="@+id/v"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/n"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/v"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/v"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/o"
                app:layout_constraintVertical_chainStyle="spread" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/zero_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/name"
            android:orientation="horizontal">

            <Button
                android:id="@+id/с"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/с"
                android:textSize="40sp" />

            <Button
                android:id="@+id/plus_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plus_minus"
                android:textSize="40sp" />

            <Button
                android:id="@+id/percent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/percent"
                android:textSize="40sp" />

            <Button
                android:id="@+id/division"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/division"
                android:textSize="40sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/one_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/zero_layout"

            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="40sp" />

            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="40sp" />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="40sp" />

            <Button
                android:id="@+id/multiplication"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/multiplication"
                android:textSize="40sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/two_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/one_layout"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="40sp" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="40sp" />

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="40sp" />

            <Button
                android:id="@+id/subtraction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/subtraction"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/three_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/two_layout"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="40sp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="40sp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="40sp" />

            <Button
                android:id="@+id/addition"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/addition"
                android:textSize="40sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/four_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@id/three_layout"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/zero"
                android:textSize="40sp" />

            <Button
                android:id="@+id/point"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/point"
                android:textSize="40sp" />

            <Button
                android:id="@+id/equally"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/equally"
                android:textSize="40sp" />

        </LinearLayout>


    </RelativeLayout>

</FrameLayout>